# Swift-Network

./: Cargo.toml  README_zh.md  readme.md
crates/core/: cargo.toml
crates/core/src/: 实现顺序.txt  理解顺序.txt
crates/core/src/authority/: authority.rs  authority_store.rs  checkpoint_store.rs  epoch_manager.rs  mod.rs  validator.rs
crates/core/src/config/: genesis.rs  mod.rs
crates/core/src/consensus/: bullshark.rs  dag.rs  mod.rs  narwhal.rs  safety_rules.rs  types.rs
crates/core/src/core/: mod.rs  object.rs  types.rs
crates/core/src/crypto/: keypair.rs  mod.rs  signature.rs
crates/core/src/execution/: effects.rs  executor.rs  gas.rs  mod.rs  validator.rs
crates/core/src/framework/: abilities.rs  mod.rs
crates/core/src/indexer/: builder.rs  mod.rs  reader.rs  store.rs
crates/core/src/mempool/: mod.rs  pool.rs  prioritizer.rs
crates/core/src/metrics/: metrics.rs  mod.rs
crates/core/src/network/: mod.rs  p2p.rs
crates/core/src/protocol/: certificate.rs  errors.rs  messages.rs  mod.rs  types.rs
crates/core/src/quorum_driver/: driver.rs  mod.rs
crates/core/src/runtime/: mod.rs  move_vm.rs
crates/core/src/state/: accumulator.rs  checkpoint.rs  mod.rs  pruner.rs  store.rs
crates/core/src/storage/: cache.rs  event_store.rs  indexes.rs  mod.rs  (+2 more)
crates/swift-scan/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
crates/swift-scan/src/: App.vue
crates/swift-wallet/: manifest.json  package-lock.json  package.json  vite.config.ts
src/: block.rs  blockchain.rs  crypto.rs  main.rs  node.rs  transaction.rs  utils.rs
(+34 files in other folders)
