[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"  # 使用 rand 0.8.x 版本
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
ed25519-dalek = "1.0.1"  # 使用最新的兼容版本
bip39 = { version = "2.1.0", default-features = false }
curve25519-dalek = "3.2"  # 确保使用的版本兼容