[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
rand = "0.8.5"  # 使用 rand 0.8.x 版本
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core", "serde"] }
bip39 = { version = "2.1.0", default-features = false }
curve25519-dalek = "4.1.3"  # 确保使用的版本兼容
hyper = { version = "1.0", features = ["full", "server", "http1"] }
hyper-util = { version = "0.1", features = ["full", "server"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }  # 添加 tokio 依赖

libp2p = { version = "0.54", features = ["tokio", "tcp", "mdns", "floodsub", "macros", "noise", "yamux", "kad"] } 

base64 = "0.22.1"

wasmer = { version = "5.0.2", features = ["sys"] }

sui-sdk = "0.0.0"
sui-types = "0.10"
sui-move = "0.10"
move-binary-format = "0.10"
move-core-types = "0.0.3"
move-vm-runtime = "0.10"




bytes = "1.0"
